# real-time-logistic-simulation

./: .clang-uml  .gitignore  CMakeLists.txt  Makefile  README.md  build.bat  build.sh  config.json  configuration.json  products copy.json  products.json  updated_orders.json
config/: configuration.json  logistics.json  orders.json  parameters.json
docs/: data_model.pu  logistics.pu  thread_sequence.pu
docs/diagram_class/: class_diagram.puml
docs/diagrams/strategy_pattern.puml/: class_diagram.puml
src/: initializer.cpp  initializer.hpp  main.cpp  parameters.hpp  parameters_parser.hpp  shell.hpp  utils.cpp  utils.hpp
src/logistics/: action.hpp  actionner.cpp  actionner.hpp  actions.hpp  address.hpp  address_database.hpp  conveyor.hpp  coordinates.cpp  coordinates.hpp  location.hpp  logistic_entity.hpp  order.hpp  ordonator.cpp  ordonator.hpp  product.hpp  product_database.hpp  product_reference.hpp  reference.cpp  reference.hpp  reference_manager.cpp  reference_manager.hpp  scheduler.cpp  scheduler.hpp  site.hpp  task.hpp  task_factory.hpp  tool_type.hpp  tools.hpp  worker.hpp
src/product/: order.hpp  order_database.cpp  order_database.hpp  order_factory.cpp  order_factory.hpp  order_generator.hpp  product.hpp  product_database.cpp  product_database.hpp
src/stock/order/: order.hpp  order_database.cpp  order_database.hpp  order_factory.hpp
src/stock/product/: product.hpp  product_database.cpp  product_database.hpp
src/stock/reference/: product_reference.hpp  reference_manager.cpp  reference_manager.hpp
